k8s/production/websocket-event-publisher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-websocket-event-publisher
  namespace: chicmoz-prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/cluster-issuer: "chicmoz-issuer-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ws.chicmoz.info
      secretName: chicmoz-ws-tls
  rules:
    - host: ws.chicmoz.info
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: websocket-event-publisher
                port:
                  name: websocket-port
status:
  loadBalancer: {}
